# microbiome-pipeline-docker

./: .dockerignore  LICENSE  README.md  config.yaml  docker_steps  dockerfile  download_databases.sh  environment.yml  pyproject.toml  setup.sh
config_example/: config.yaml
microbiome_cli/: cli.py  config.py  config_manager.py  downloader.py  pathways.py  qc.py  taxonomy.py  utils.py
src/microbiome_cli/: __init__.py  cli.py  config_manager.py  downloader.py  pathways.py  qc.py  taxonomy.py  utils.py
