[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microbiome-cli"
version = "0.1.0"
description = "Pipeline microbioma"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "kneaddata==0.12.3",
    "metaphlan==4.2.2",
    "humann==3.9",
    "biopython",
    "pandas",
    "pyyaml"
]

[project.scripts]
microbiome-cli = "microbiome_cli.cli:main"

license = "MIT"